# Paxos

./: README.md  pyproject.toml
paxos/: learn1  learn2  paxos.conf  prop.sorted  prop1  prop2  run.sh  run_catch_up.sh  run_loss.sh
paxos-skeleton/: prop1  prop2
paxos-skeleton/fake-paxos/: paxos.py
paxos/fake-paxos/: paxos.py
